improve basic cards template

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,6 @@
 
 @layer components {
 	.card {
-		@apply  w-[64mm] h-[89mm] text-4xl p-4 bg-slate-200 shadow-xl grid place-content-center
+		@apply  w-[64mm] h-[89mm] text-4xl p-4 bg-slate-200 shadow-xl grid place-content-center rounded-lg
 	}
 }
