add some basic styles for tokens

--- a/src/app.css
+++ b/src/app.css
@@ -6,4 +6,7 @@
 	.card {
 		@apply  w-[64mm] h-[89mm] text-4xl p-4 bg-slate-200 shadow-xl grid place-content-center rounded-lg
 	}
+	.token {
+		@apply  w-[20mm] h-[20mm] text-4xl p-4 bg-slate-200 shadow-xl grid place-content-center rounded-lg
+	}
 }
