--- a/src/app.css
+++ b/src/app.css
@@ -4,9 +4,13 @@
 
 @layer components {
 	.card { @apply  w-[64mm] h-[89mm] text-4xl p-4 bg-slate-200 shadow-xl grid place-content-center rounded-lg }
-	.card-sm { @apply w-[41mm] h-[63mm] card }
+	.card .center { @apply text-6xl }
+	.card-sm { @apply w-[41mm] h-[63mm] text-3xl card }
+	.card-sm .center { @apply text-5xl }
 	.card-md { @apply card }
-	.card-lg { @apply w-[70mm] h-[121mm] card }
+	.card-md .center { @apply text-6xl }
+	.card-lg { @apply w-[70mm] h-[121mm] text-5xl card }
+	.card-lg .center { @apply text-7xl }
 
 	.token { @apply  w-[20mm] h-[20mm] text-4xl p-4 bg-slate-200 shadow-xl grid place-content-center rounded-lg }
 	.token-sm { @apply w-[10mm] h-[10mm] text-2xl token }
